--- a/app/src/main/res/layout/item_trending_placeholder.xml
+++ b/app/src/main/res/layout/item_trending_placeholder.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/shimmerAnimeListTrending"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:shimmer_auto_start="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
