--- a/app/src/main/res/layout/item_vertical.xml
+++ b/app/src/main/res/layout/item_vertical.xml
@@ -56,7 +56,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
-            android:textColor="@color/text_card_color"
             android:layout_marginEnd="8dp"
             android:ellipsize="marquee"
             android:fadingEdge="horizontal"
@@ -65,6 +64,7 @@
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
             android:singleLine="true"
+            android:textColor="@color/text_card_color"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageAnimePoster"
@@ -77,11 +77,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:textColor="@color/text_card_color"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_bold"
             android:maxLines="1"
+            android:textColor="@color/text_card_color"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageAnimePoster"
@@ -92,14 +92,15 @@
             android:id="@+id/textAnimeReleaseDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_card_color"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_bold"
             android:maxLines="1"
+            android:textColor="@color/text_card_color"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textAnimeCategory"
+            app:layout_constraintStart_toEndOf="@+id/imageAnimePoster"
             app:layout_constraintTop_toBottomOf="@+id/textAnimeCategory"
             tools:text="LoremIpsum" />
 
@@ -107,14 +108,15 @@
             android:id="@+id/textAnimeDuration"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:textColor="@color/text_card_color"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_bold"
             android:maxLines="1"
+            android:textColor="@color/text_card_color"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textAnimeReleaseDate"
+            app:layout_constraintStart_toEndOf="@+id/imageAnimePoster"
             app:layout_constraintTop_toBottomOf="@+id/textAnimeReleaseDate"
             tools:text="Lorem Ipsum" />
 
@@ -122,14 +124,15 @@
             android:id="@+id/textAnimeTotalEp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/nunito_bold"
-            android:textColor="@color/text_card_color"
             android:maxLines="1"
+            android:textColor="@color/text_card_color"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textAnimeDuration"
+            app:layout_constraintStart_toEndOf="@+id/imageAnimePoster"
             app:layout_constraintTop_toBottomOf="@+id/textAnimeDuration"
             tools:text="Lorem Ipsum" />
 
@@ -140,8 +143,8 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/shadow_text"
             android:fontFamily="@font/nunito_black"
-            android:textColor="@color/text_card_color"
             android:paddingHorizontal="8dp"
+            android:textColor="@color/text_card_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageAnimePoster"
             app:layout_constraintStart_toStartOf="@+id/imageAnimePoster"
@@ -152,11 +155,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:textColor="@color/text_card_color"
             android:layout_marginBottom="8dp"
             android:background="@drawable/shadow_text"
             android:fontFamily="@font/nunito_black"
             android:paddingHorizontal="8dp"
+            android:textColor="@color/text_card_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="Lorem Ipsum" />
